--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
     <title>To-do list v1</title>
 </head>
 <body>
-    <h1>Hello <%=name%></h1>
+    <h1>Hello <%=kindOfDay%></h1>
 </body>
 </html>
