--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,18 @@
     <title>To-do list v1</title>
 </head>
 <body>
-    <h1>Hello <%=kindOfDay%></h1>
+    <h1><%= kindOfDay %></h1>
+    <ul>
+    <% for(var i = 0; i < newListItem.length; i++) {%>
+
+      <li><%= newListItem[i] %></li>
+
+    <% } %>
+        
+    </ul>
+    <form action="/" method="post">
+        <input type="text" name="newItem" placeholder="Write the item you want to add ">
+        <button type="submit">Add Item!</button>
+    </form>
 </body>
 </html>
